<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab3</string>
    <string name="hello">Enter your email address:</string>
    <string name="edit">Type email here</string>
    <string name="pwd">Type your password: </string>
    <string name="login">LOGIN</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name: </string>
    <string name="email2">Your email: </string>
    <string name="picture">Your picture: </string>
    <string name="addName">Enter your name </string>
    <string name="addEmail">Enter your email </string>
    <string name="chatBtn"> Go to chat </string>
    <string name="sdBtn"> SEND </string>
    <string name="rcvBtn"> RECEIVE </string>
    <string name="chatType"> Type here </string>
    <string name="alertYes"> Yes </string>
    <string name="alertNo"> Cancel </string>
    <string name="alertMsg"> Do you want to delete this? </string>
    <string name="selectRow"> The selected row is:  </string>
    <string name="selectDbId"> The database id:   </string>
    <string name="weatherBtn"> Weather Forecast </string>
    <string name="buttonToPicture">Click the button above to take a picture</string>
    <string name="currTemperature">The Current temperature is:</string>
    <string name="minTemperature">The minimum temperature is:</string>
    <string name="maxTemperature">The maximum temperature is:</string>
    <string name="uvRating">The UV rating is:</string>
    <string name="toolbarString">Go to Toolbar page</string>
    <string name="firstMenuString">Click on first item</string>
    <string name="secondMenuString">Click on second item</string>
    <string name="thirdMenuString">Click on third item</string>
    <string name="fourMenuString">Click on fourth item</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="chatString">Chat Page</string>
    <string name="weatherString">Weather Page</string>
    <string name="backToLoginString">Back to Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>