<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/profile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/name" />


    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/email2" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/addEmail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/picture" />

    <ImageButton
        android:id="@+id/imgButton"
        android:layout_width="fill_parent"
        android:src="@android:drawable/picture_frame"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/buttonToPicture" />

    <Button
        android:id="@+id/chatButton"
        android:layout_width="fill_parent"
        android:text="@string/chatBtn"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/weatherButton"
        android:text="@string/weatherBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/toolBarButton"
        android:text="@string/toolbarString"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>