<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.72"
        android:weightSum="1">

        <ListView
            android:id="@+id/myListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:layout_marginBottom="3dp" >

        <Button
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="2"
            android:text="@string/sdBtn" />

        <EditText
            android:id="@+id/chatText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/chatType" />

        <Button
            android:id="@+id/rcvButton"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="2"
            android:text="@string/rcvBtn" />


    </LinearLayout>

</LinearLayout>